--- a/smockerVaadin/src/main/webapp/WEB-INF/web.xml
+++ b/smockerVaadin/src/main/webapp/WEB-INF/web.xml
@@ -23,7 +23,7 @@
     
     <servlet-mapping>
         <servlet-name>demo</servlet-name>
-        <url-pattern>/demo/*</url-pattern>
+        <url-pattern>/*</url-pattern>
     </servlet-mapping>
     
     <servlet-mapping>
