--- a/smockerVaadin/pom.xml
+++ b/smockerVaadin/pom.xml
@@ -51,19 +51,12 @@
 
 	<dependencyManagement>
 		<dependencies>
-			
-<!-- 			<dependency>
-				<groupId>org.vaadin</groupId>
-				<artifactId>easyapp</artifactId>
-				<version>0.0.1-SNAPSHOT</version>
-			</dependency> -->
-			
-			<dependency>
-			   <groupId>org.vaadin.addons</groupId>
-			   <artifactId>vaadin-sliderpanel</artifactId>
-			   <version>2.0.0</version>
-			</dependency>
-			
+
+			<!-- <dependency> <groupId>org.vaadin</groupId> <artifactId>easyapp</artifactId> 
+				<version>0.0.1-SNAPSHOT</version> </dependency> -->
+
+
+
 			<!-- VAADIN -->
 			<dependency>
 				<groupId>com.vaadin</groupId>
@@ -115,9 +108,24 @@
 
 		<dependency>
 			<groupId>org.vaadin.addons</groupId>
+			<artifactId>vaadin-sliderpanel</artifactId>
+			<version>1.4.2</version>
+		</dependency>
+
+
+		<dependency>
+			<groupId>org.vaadin.addons</groupId>
 			<artifactId>aceeditor</artifactId>
 			<version>${aceeditor.version}</version>
 		</dependency>
+		
+		<dependency>
+   <groupId>org.vaadin.addons</groupId>
+   <artifactId>stackpanel</artifactId>
+   <version>2.0.0</version>
+</dependency>
+		
+		
 		<dependency>
 			<groupId>com.vaadin</groupId>
 			<artifactId>vaadin-server</artifactId>
@@ -131,6 +139,12 @@
 			<groupId>org.vaadin.spring.extensions</groupId>
 			<artifactId>vaadin-spring-ext-core</artifactId>
 			<version>2.0.0.RELEASE</version>
+		</dependency>
+		
+	    <dependency>
+			<groupId>org.vaadin</groupId>
+			<artifactId>easyapp</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
 
 		<dependency>
