--- a/smockerVaadin/pom.xml
+++ b/smockerVaadin/pom.xml
@@ -102,6 +102,13 @@
 	</dependencyManagement>
 
 	<dependencies>
+
+		<dependency>
+			<groupId>com.github.appreciated</groupId>
+			<artifactId>material</artifactId>
+			<version>0.5.4</version>
+		</dependency>
+		
 		<dependency>
 			<groupId>org.vaadin</groupId>
 			<artifactId>easyApp</artifactId>
