--- a/smockerVaadin/src/main/resources/BundleUI.properties
+++ b/smockerVaadin/src/main/resources/BundleUI.properties
@@ -1,4 +1,8 @@
 Watch_Button=Watch
+CleanAllToolTip=Clean every thing
+CleanAll=Clean All
+Clean=Clean
+CleanToolTip=Clean selected item
 UnWatch_Button=UnWatch
 ConnectionType=ConnectionType
 Port=Port
