--- a/smockerVaadin/pom.xml
+++ b/smockerVaadin/pom.xml
@@ -31,6 +31,7 @@
 		<javassist.version>3.21.0-GA</javassist.version>
 		<version.jboss.bom.wfk>2.7.0-redhat-1</version.jboss.bom.wfk>
 		<scannotation.version>1.0.3</scannotation.version>
+		<jackson.version>2.8.8</jackson.version>
 	</properties>
 
 	<repositories>
@@ -51,12 +52,8 @@
 
 	<dependencyManagement>
 		<dependencies>
-
 			<!-- <dependency> <groupId>org.vaadin</groupId> <artifactId>easyapp</artifactId> 
 				<version>0.0.1-SNAPSHOT</version> </dependency> -->
-
-
-
 			<!-- VAADIN -->
 			<dependency>
 				<groupId>com.vaadin</groupId>
@@ -102,6 +99,12 @@
 	</dependencyManagement>
 
 	<dependencies>
+	
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+			<version>${jackson.version}</version>
+		</dependency>
 
 		<dependency>
 			<groupId>com.github.appreciated</groupId>
