--- a/smockerVaadin/pom.xml
+++ b/smockerVaadin/pom.xml
@@ -32,6 +32,7 @@
 		<version.jboss.bom.wfk>2.7.0-redhat-1</version.jboss.bom.wfk>
 		<scannotation.version>1.0.3</scannotation.version>
 		<jackson.version>2.8.8</jackson.version>
+		<commons-lang.version>2.6</commons-lang.version>
 	</properties>
 
 	<repositories>
@@ -99,6 +100,11 @@
 	</dependencyManagement>
 
 	<dependencies>
+		<dependency>
+		    <groupId>commons-lang</groupId>
+		    <artifactId>commons-lang</artifactId>
+		    <version>${commons-lang.version}</version>
+		</dependency>
 	
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
