management/fix of UI display

--- a/smockerVaadin/src/main/resources/BundleUI.properties
+++ b/smockerVaadin/src/main/resources/BundleUI.properties
@@ -1,9 +1,13 @@
 Watch_Button=Watch
+Input=Input
+Output=Output
 CleanAllToolTip=Clean every thing
 CleanAll=Clean All
 Clean=Clean
 CleanToolTip=Clean selected item
 UnWatch_Button=UnWatch
+StackTrace=StackTrace
+StackTraceToolTip=View stack trace of the caller
 ConnectionType=ConnectionType
 Port=Port
 Adress=Adress
