--- a/smockerVaadin/src/main/webapp/WEB-INF/web.xml
+++ b/smockerVaadin/src/main/webapp/WEB-INF/web.xml
@@ -18,6 +18,12 @@
 	      <param-name>pushmode</param-name>
 	      <param-value>automatic</param-value>
     	</init-param>
+    	
+    	<init-param>
+	      <param-name>legacyPropertyToString</param-name>
+	      <param-value>enabled</param-value>
+    	</init-param>
+    	 
         <async-supported>true</async-supported>
         
         
