--- a/smockerVaadin/src/main/webapp/WEB-INF/web.xml
+++ b/smockerVaadin/src/main/webapp/WEB-INF/web.xml
@@ -21,7 +21,7 @@
     	
     	<init-param>
 	      <param-name>legacyPropertyToString</param-name>
-	      <param-value>enabled</param-value>
+	      <param-value>true</param-value>
     	</init-param>
     	 
         <async-supported>true</async-supported>
