--- a/smockerVaadin/src/main/resources/BundleUI.properties
+++ b/smockerVaadin/src/main/resources/BundleUI.properties
@@ -1,7 +1,15 @@
 Watch_Button=Watch
+outputJson=Json Output
+outputHtml=Html output
+ParseError=Parsing error look at the logs
+addToMock=add to mock
+addToMockToolTip=Add selecetd value to mock space\n
 Mute_Button=Mute
 Input=Input
 Output=Output
+Json=Json\n
+remove=remove
+removeToolTip=remove selected item
 CleanAllToolTip=Clean every thing
 CleanAll=Clean All
 Clean=Clean
