--- a/smockerVaadin/pom.xml
+++ b/smockerVaadin/pom.xml
@@ -33,6 +33,7 @@
 		<scannotation.version>1.0.3</scannotation.version>
 		<jackson.version>2.8.8</jackson.version>
 		<commons-lang.version>2.6</commons-lang.version>
+		<google-json.version>1.1</google-json.version>
 	</properties>
 
 	<repositories>
@@ -100,12 +101,19 @@
 	</dependencyManagement>
 
 	<dependencies>
+
 		<dependency>
-		    <groupId>commons-lang</groupId>
-		    <artifactId>commons-lang</artifactId>
-		    <version>${commons-lang.version}</version>
+			<groupId>com.googlecode.json-simple</groupId>
+			<artifactId>json-simple</artifactId>
+			<version>${google-json.version}</version>
 		</dependency>
-	
+		
+		<dependency>
+			<groupId>commons-lang</groupId>
+			<artifactId>commons-lang</artifactId>
+			<version>${commons-lang.version}</version>
+		</dependency>
+
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-databind</artifactId>
@@ -117,7 +125,7 @@
 			<artifactId>material</artifactId>
 			<version>0.5.4</version>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>org.vaadin</groupId>
 			<artifactId>easyApp</artifactId>
