--- a/smockerVaadin/src/main/resources/BundleUI.properties
+++ b/smockerVaadin/src/main/resources/BundleUI.properties
@@ -1,4 +1,5 @@
 Watch_Button=Watch
+RemoveQuestion=Do you really want to remove selected items ?
 outputJson=Json Output
 outputHtml=Html output
 ParseError=Parsing error look at the logs
