--- a/smockerVaadin/pom.xml
+++ b/smockerVaadin/pom.xml
@@ -34,6 +34,7 @@
 		<jackson.version>2.8.8</jackson.version>
 		<commons-lang.version>2.6</commons-lang.version>
 		<google-json.version>1.1</google-json.version>
+		<vaadin-sliderpanel.version>1.4.2</vaadin-sliderpanel.version>
 	</properties>
 
 	<repositories>
@@ -54,9 +55,6 @@
 
 	<dependencyManagement>
 		<dependencies>
-			<!-- <dependency> <groupId>org.vaadin</groupId> <artifactId>easyapp</artifactId> 
-				<version>0.0.1-SNAPSHOT</version> </dependency> -->
-			<!-- VAADIN -->
 			<dependency>
 				<groupId>com.vaadin</groupId>
 				<artifactId>vaadin-bom</artifactId>
@@ -107,7 +105,7 @@
 			<artifactId>json-simple</artifactId>
 			<version>${google-json.version}</version>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>commons-lang</groupId>
 			<artifactId>commons-lang</artifactId>
@@ -118,6 +116,13 @@
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-databind</artifactId>
 			<version>${jackson.version}</version>
+		</dependency>
+
+
+		<dependency>
+			<groupId>de.steinwedel.vaadin.addon</groupId>
+			<artifactId>messagebox</artifactId>
+			<version>3.0.19</version>
 		</dependency>
 
 		<dependency>
@@ -137,7 +142,7 @@
 		<dependency>
 			<groupId>org.vaadin.addons</groupId>
 			<artifactId>vaadin-sliderpanel</artifactId>
-			<version>1.4.2</version>
+			<version>${vaadin-sliderpanel.version}</version>
 		</dependency>
 
 
