--- a/smockerAgent1.7/pom.xml
+++ b/smockerAgent1.7/pom.xml
@@ -59,12 +59,19 @@
 		</dependency>
 
 		<!-- https://mvnrepository.com/artifact/org.javassist/javassist -->
-		<dependency>
+		<!-- dependency>
 			<groupId>org.javassist</groupId>
 			<artifactId>javassist</artifactId>
 			<version>3.20.0-GA</version>
-		</dependency>
+		</dependency-->
 
+		<dependency>
+			<groupId>sample</groupId>
+			<artifactId>com.sample</artifactId>
+			<version>1.0</version>
+			<scope>system</scope>
+			<systemPath>${project.basedir}/lib/javassist.jar</systemPath>
+		</dependency>
 
 	</dependencies>
 </project>
