--- a/smockerVaadin/src/main/resources/BundleUI.properties
+++ b/smockerVaadin/src/main/resources/BundleUI.properties
@@ -1,4 +1,7 @@
 Watch_Button=Watch
+mock_mode_disabled=mock disabled
+mock_mode_strict=mock strictly
+mock_mode_mock_or_call=mock else call
 RemoveQuestion=Do you really want to remove selected items ?
 outputJson=Json Output
 outputHtml=Html output
