--- a/smockerVaadin/pom.xml
+++ b/smockerVaadin/pom.xml
@@ -13,12 +13,11 @@
 		<maven.compiler.source>1.8</maven.compiler.source>
 		<maven.compiler.target>1.8</maven.compiler.target>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<!--vaadin.version>7.7.7</vaadin.version>
-		<vaadin.plugin.version>7.7.7</vaadin.plugin.version-->
-		
+		<!--vaadin.version>7.7.7</vaadin.version> <vaadin.plugin.version>7.7.7</vaadin.plugin.version -->
+
 		<vaadin.version>7.7.7</vaadin.version>
 		<vaadin.plugin.version>7.7.7</vaadin.plugin.version>
-		
+
 		<eclipselink.version>2.6.4</eclipselink.version>
 		<jetty.plugin.version>9.3.9.v20160517</jetty.plugin.version>
 		<version.jboss.bom.eap.version>7.0.0.GA</version.jboss.bom.eap.version>
@@ -154,6 +153,12 @@
 			<groupId>org.vaadin.addons</groupId>
 			<artifactId>vaadin-sliderpanel</artifactId>
 			<version>${vaadin-sliderpanel.version}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.vaadin.crudui</groupId>
+			<artifactId>crudui</artifactId>
+			<version>1.6.0</version>
 		</dependency>
 
 
