--- a/smockerVaadin/src/main/resources/BundleUI.properties
+++ b/smockerVaadin/src/main/resources/BundleUI.properties
@@ -1,4 +1,7 @@
 Watch_Button=Watch
+ConfigurationView=Configuration
+JavaApplicationView=Java Application
+MockSpaceView=Mock Space
 mock_mode_disabled=mock disabled
 mock_mode_strict=mock strictly
 mock_mode_mock_or_call=mock else call
