--- a/smockerVaadin/pom.xml
+++ b/smockerVaadin/pom.xml
@@ -13,15 +13,18 @@
 		<maven.compiler.source>1.8</maven.compiler.source>
 		<maven.compiler.target>1.8</maven.compiler.target>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<vaadin.version>7.7.7</vaadin.version>
-		<vaadin.plugin.version>7.7.7</vaadin.plugin.version>
+		<!--vaadin.version>7.7.7</vaadin.version> <vaadin.plugin.version>7.7.7</vaadin.plugin.version -->
+
+		<vaadin.version>8.3.1</vaadin.version>
+		<vaadin.plugin.version>8.3.1</vaadin.plugin.version>
+
 		<eclipselink.version>2.6.4</eclipselink.version>
 		<jetty.plugin.version>9.3.9.v20160517</jetty.plugin.version>
 		<version.jboss.bom.eap.version>7.0.0.GA</version.jboss.bom.eap.version>
-		<aceeditor.version>0.8.14</aceeditor.version>
+		<aceeditor.version>0.8.15</aceeditor.version>
 		<jboss.bom.eap.version>7.0.0.GA</jboss.bom.eap.version>
 		<javax.servlet.version>2.3</javax.servlet.version>
-		<jpacontainer.version>3.2.0</jpacontainer.version>
+		<jpacontainer.version>4.0.0</jpacontainer.version>
 		<javax.persistence.version>2.1.1</javax.persistence.version>
 		<h2.version>1.3.160</h2.version>
 		<jboss-vfs.version>3.1.0.Final</jboss-vfs.version>
@@ -152,6 +155,12 @@
 			<version>${vaadin-sliderpanel.version}</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.vaadin.crudui</groupId>
+			<artifactId>crudui</artifactId>
+			<version>1.6.0</version>
+		</dependency>
+
 
 		<dependency>
 			<groupId>org.vaadin.addons</groupId>
@@ -168,7 +177,7 @@
 
 		<dependency>
 			<groupId>com.vaadin</groupId>
-			<artifactId>vaadin-server</artifactId>
+			<artifactId>vaadin-compatibility-server</artifactId>
 		</dependency>
 
 		<!-- <dependency> <groupId>com.vaadin</groupId> <artifactId>vaadin-spring</artifactId> 
