--- a/smockerVaadin/src/main/resources/BundleUI.properties
+++ b/smockerVaadin/src/main/resources/BundleUI.properties
@@ -1,4 +1,6 @@
 Watch_Button=Watch
+ViewDetails_Button=View Details
+ViewDetails_ToolTip=View all the communication\n
 RemoveQuestion=Do you really want to remove selected items ?
 outputJson=Json Output
 outputHtml=Html output
@@ -10,10 +12,10 @@ Input=Input
 Output=Output
 Json=Json\n
 remove=remove
-removeToolTip=remove selected item
-CleanAllToolTip=Clean every thing
-CleanAll=Clean All
-Clean=Clean
+Remove_ToolTip=remove selected item
+CleanAll_ToolTip=Clean every thing
+CleanAll_Button=Clean All
+Clean_Button=Clean
 CleanToolTip=Clean selected item
 UnWatch_Button=UnWatch
 StackTrace=StackTrace
