--- a/smockerVaadin/src/main/resources/BundleUI.properties
+++ b/smockerVaadin/src/main/resources/BundleUI.properties
@@ -1,5 +1,7 @@
 Watch_Button=Watch
 ViewDetails_Button=View Details
+Communication=Communication
+Communications=Communication
 ViewDetails_ToolTip=View all the communication\n
 RemoveQuestion=Do you really want to remove selected items ?
 outputJson=Json Output
