New Connection details

--- a/smockerVaadin/src/main/resources/BundleUI.properties
+++ b/smockerVaadin/src/main/resources/BundleUI.properties
@@ -7,10 +7,11 @@ RemoveQuestion=Do you really want to remove selected items ?
 outputJson=Json Output
 outputHtml=Html output
 ParseError=Parsing error look at the logs
-addToMock=add to mock
-addToMockToolTip=Add selecetd value to mock space\n
+AddToMock_Button=add to mock
+AddToMock_ToolTip=Add selecetd value to mock space\n
 Mute_Button=Mute
 Input=Input
+Refresh_Button=Retresh
 Output=Output
 Json=Json\n
 remove=remove
