--- a/smockerVaadin/src/main/resources/BundleUI.properties
+++ b/smockerVaadin/src/main/resources/BundleUI.properties
@@ -11,7 +11,10 @@ AddToMock_Button=add to mock
 AddToMock_ToolTip=Add selecetd value to mock space\n
 Mute_Button=Mute
 Input=Input
+GroovyEditor=Groovy editor
+Refresh_ToolTip=Refresh
 Refresh_Button=Retresh
+MockedCommunications=Mocked Communications
 Output=Output
 Json=Json\n
 remove=remove
