--- a/smockerVaadin/src/main/resources/BundleUI.properties
+++ b/smockerVaadin/src/main/resources/BundleUI.properties
@@ -1,25 +1,30 @@
 Watch_Button=Watch
-ConfigurationView=Configuration
-JavaApplicationView=Java Application
-MockSpaceView=Mock Space
-mock_mode_disabled=mock disabled
-mock_mode_strict=mock strictly
-mock_mode_mock_or_call=mock else call
+Play_Button=PLay
+Play_ToolTip=Play the mock, click several time to change the state
+JavaAppView=Java Applications
+ViewDetails_Button=View Details
+Communication=Communication
+Communications=Communications
+ViewDetails_ToolTip=View all the communication\n
 RemoveQuestion=Do you really want to remove selected items ?
 outputJson=Json Output
 outputHtml=Html output
 ParseError=Parsing error look at the logs
-addToMock=add to mock
-addToMockToolTip=Add selecetd value to mock space\n
+AddToMock_Button=add to mock
+AddToMock_ToolTip=Add selecetd value to mock space\n
 Mute_Button=Mute
 Input=Input
+GroovyEditor=Groovy editor
+Refresh_ToolTip=Refresh
+Refresh_Button=Retresh
+MockedCommunications=Mocked Communications
 Output=Output
 Json=Json\n
 remove=remove
-removeToolTip=remove selected item
-CleanAllToolTip=Clean every thing
-CleanAll=Clean All
-Clean=Clean
+Remove_ToolTip=remove selected item
+CleanAll_ToolTip=Clean every thing
+CleanAll_Button=Clean All
+Clean_Button=Clean
 CleanToolTip=Clean selected item
 UnWatch_Button=UnWatch
 StackTrace=StackTrace
