--- a/smockerVaadin/pom.xml
+++ b/smockerVaadin/pom.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
 
@@ -15,16 +16,16 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<!--vaadin.version>7.7.7</vaadin.version> <vaadin.plugin.version>7.7.7</vaadin.plugin.version -->
 
-		<vaadin.version>7.7.7</vaadin.version>
-		<vaadin.plugin.version>7.7.7</vaadin.plugin.version>
+		<vaadin.version>8.3.1</vaadin.version>
+		<vaadin.plugin.version>8.3.1</vaadin.plugin.version>
 
 		<eclipselink.version>2.6.4</eclipselink.version>
 		<jetty.plugin.version>9.3.9.v20160517</jetty.plugin.version>
-		<version.jboss.bom.eap.version>7.0.0.GA</version.jboss.bom.eap.version>
-		<aceeditor.version>0.8.14</aceeditor.version>
-		<jboss.bom.eap.version>7.0.0.GA</jboss.bom.eap.version>
+		<version.jboss.bom.eap.version>7.1.1.GA</version.jboss.bom.eap.version>
+		<aceeditor.version>0.8.15</aceeditor.version>
+		<jboss.bom.eap.version>7.1.1.GA</jboss.bom.eap.version>
 		<javax.servlet.version>2.3</javax.servlet.version>
-		<jpacontainer.version>3.2.0</jpacontainer.version>
+		<jpacontainer.version>4.0.0</jpacontainer.version>
 		<javax.persistence.version>2.1.1</javax.persistence.version>
 		<h2.version>1.3.160</h2.version>
 		<jboss-vfs.version>3.1.0.Final</jboss-vfs.version>
@@ -38,6 +39,11 @@
 		<commons-lang.version>2.6</commons-lang.version>
 		<google-json.version>1.1</google-json.version>
 		<vaadin-sliderpanel.version>1.4.2</vaadin-sliderpanel.version>
+		<version.wildfly-swarm>2018.3.3</version.wildfly-swarm>
+		<easyApp.version>0.1</easyApp.version>
+		<apache.commons.version>3.7</apache.commons.version>
+		<commons-collections4.version>4.1</commons-collections4.version>
+		
 	</properties>
 
 	<repositories>
@@ -54,6 +60,14 @@
 			<name>Vaadin snapshot repository</name>
 			<url>http://oss.sonatype.org/content/repositories/vaadin-snapshots/</url>
 		</repository>
+		<repository>
+			<id>maven-central</id>
+			<name>Maven central</name>
+			<url>http://central.maven.org/maven2/</url>
+		</repository>
+
+
+
 	</repositories>
 
 	<dependencyManagement>
@@ -96,12 +110,26 @@
 				<scope>import</scope>
 				<optional>false</optional>
 			</dependency>
+
+			<dependency>
+				<groupId>org.wildfly.swarm</groupId>
+				<artifactId>bom</artifactId>
+				<version>2018.3.3</version>
+				<scope>import</scope>
+				<type>pom</type>
+			</dependency>
 		</dependencies>
 
 
 	</dependencyManagement>
 
 	<dependencies>
+
+
+
+		<!-- <dependency> <groupId>org.wildfly.swarm</groupId> <artifactId>undertow</artifactId> 
+			</dependency> <dependency> <groupId>org.wildfly.swarm</groupId> <artifactId>jpa</artifactId> 
+			</dependency> -->
 
 		<dependency>
 			<groupId>com.googlecode.json-simple</groupId>
@@ -114,6 +142,18 @@
 			<artifactId>commons-lang</artifactId>
 			<version>${commons-lang.version}</version>
 		</dependency>
+		
+		<dependency>
+		    <groupId>org.apache.commons</groupId>
+		    <artifactId>commons-lang3</artifactId>
+		    <version>${apache.commons.version}</version>
+		</dependency>
+		
+		<dependency>
+		    <groupId>org.apache.commons</groupId>
+		    <artifactId>commons-collections4</artifactId>
+		    <version>${commons-collections4.version}</version>
+		</dependency>
 
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
@@ -125,7 +165,7 @@
 		<dependency>
 			<groupId>de.steinwedel.vaadin.addon</groupId>
 			<artifactId>messagebox</artifactId>
-			<version>3.0.19</version>
+			<version>4.0.21</version>
 		</dependency>
 
 		<dependency>
@@ -135,9 +175,9 @@
 		</dependency>
 
 		<dependency>
-			<groupId>org.vaadin</groupId>
+			<groupId>com.jenetware</groupId>
 			<artifactId>easyApp</artifactId>
-			<version>1.0-beta</version>
+			<version>${easyApp.version}</version>
 		</dependency>
 
 
@@ -177,7 +217,7 @@
 
 		<dependency>
 			<groupId>com.vaadin</groupId>
-			<artifactId>vaadin-server</artifactId>
+			<artifactId>vaadin-compatibility-server</artifactId>
 		</dependency>
 
 		<!-- <dependency> <groupId>com.vaadin</groupId> <artifactId>vaadin-spring</artifactId> 
@@ -392,6 +432,11 @@
 			<artifactId>switch</artifactId>
 			<version>3.0.0</version>
 		</dependency>
+		<dependency>
+			<groupId>org.codehaus.groovy</groupId>
+			<artifactId>groovy-all</artifactId>
+			<version>2.4.4</version>
+		</dependency>
 
 
 	</dependencies>
@@ -399,11 +444,27 @@
 	<build>
 		<!-- <finalName>${artifactId}</finalName> -->
 		<plugins>
+
+
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.7.0</version>
+				<configuration>
+					<source>1.8</source>
+					<target>1.8</target>
+				</configuration>
+			</plugin>
+
+
+
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-war-plugin</artifactId>
 				<version>3.0.0</version>
 				<configuration>
+					<source>1.8</source>
+					<target>1.8</target>
 					<failOnMissingWebXml>false</failOnMissingWebXml>
 					<!-- Exclude an unnecessary file generated by the GWT compiler. -->
 					<packagingExcludes>WEB-INF/classes/VAADIN/widgetsets/WEB-INF/**</packagingExcludes>
@@ -415,6 +476,15 @@
 							</includes>
 							<targetPath>WEB-INF/classes/icons</targetPath>
 						</resource>
+						
+						<resource>
+							<directory>css</directory>
+							<includes>
+								<include>**/*.css</include>
+							</includes>
+							<targetPath>WEB-INF/classes/css</targetPath>
+						</resource>
+						
 					</webResources>
 
 
@@ -472,6 +542,11 @@
 					<scanIntervalSeconds>2</scanIntervalSeconds>
 				</configuration>
 			</plugin>
+
+
+			<!-- <plugin> <groupId>org.wildfly.swarm</groupId> <artifactId>wildfly-swarm-plugin</artifactId> 
+				<executions> <execution> <goals> <goal>package</goal> </goals> </execution> 
+				</executions> </plugin> -->
 		</plugins>
 	</build>
 </project>
