--- a/smockerVaadin/src/main/resources/BundleUI.properties
+++ b/smockerVaadin/src/main/resources/BundleUI.properties
@@ -1,4 +1,5 @@
 Watch_Button=Watch
+MainTab=Main
 Play_Button=PLay
 Play_ToolTip=Play the mock, click several time to change the state
 JavaAppView=Java Applications
