--- a/smockerVaadin/pom.xml
+++ b/smockerVaadin/pom.xml
@@ -43,7 +43,7 @@
 		<easyApp.version>0.1</easyApp.version>
 		<apache.commons.version>3.7</apache.commons.version>
 		<commons-collections4.version>4.1</commons-collections4.version>
-		
+
 	</properties>
 
 	<repositories>
@@ -65,6 +65,12 @@
 			<name>Maven central</name>
 			<url>http://central.maven.org/maven2/</url>
 		</repository>
+		<repository>
+			<id>red-hat</id>
+			<name>Red Hat</name>
+			<url>https://maven.repository.redhat.com/ga/</url>
+		</repository>
+
 
 
 
@@ -87,14 +93,6 @@
 				<type>pom</type>
 				<scope>import</scope>
 			</dependency>
-			<dependency>
-				<groupId>org.jboss.bom.wfk</groupId>
-				<artifactId>jboss-javaee-6.0-with-tools</artifactId>
-				<version>${version.jboss.bom.wfk}</version>
-				<type>pom</type>
-				<scope>import</scope>
-			</dependency>
-
 			<dependency>
 				<groupId>org.jboss.bom</groupId>
 				<artifactId>jboss-javaee-6.0-with-hibernate</artifactId>
@@ -142,17 +140,17 @@
 			<artifactId>commons-lang</artifactId>
 			<version>${commons-lang.version}</version>
 		</dependency>
-		
+
 		<dependency>
-		    <groupId>org.apache.commons</groupId>
-		    <artifactId>commons-lang3</artifactId>
-		    <version>${apache.commons.version}</version>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-lang3</artifactId>
+			<version>${apache.commons.version}</version>
 		</dependency>
-		
+
 		<dependency>
-		    <groupId>org.apache.commons</groupId>
-		    <artifactId>commons-collections4</artifactId>
-		    <version>${commons-collections4.version}</version>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-collections4</artifactId>
+			<version>${commons-collections4.version}</version>
 		</dependency>
 
 		<dependency>
@@ -302,6 +300,7 @@
 		<dependency>
 			<groupId>org.jboss.logging</groupId>
 			<artifactId>jboss-logging</artifactId>
+			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.jboss.spec.javax.ws.rs</groupId>
@@ -438,6 +437,19 @@
 			<version>2.4.4</version>
 		</dependency>
 
+<!-- 		<dependency>
+			<groupId>org.graalvm</groupId>
+			<artifactId>graal-sdk</artifactId>
+			<version>1.0.0-rc5</version>
+		</dependency> -->
+
+		<!-- https://mvnrepository.com/artifact/com.eclipsesource.j2v8/j2v8_win32_x86_64 -->
+		<dependency>
+			<groupId>com.eclipsesource.j2v8</groupId>
+			<artifactId>j2v8_win32_x86_64</artifactId>
+			<version>4.6.0</version>
+		</dependency>
+
 
 	</dependencies>
 
@@ -476,15 +488,10 @@
 							</includes>
 							<targetPath>WEB-INF/classes/icons</targetPath>
 						</resource>
-						
-						<resource>
-							<directory>css</directory>
-							<includes>
-								<include>**/*.css</include>
-							</includes>
-							<targetPath>WEB-INF/classes/css</targetPath>
-						</resource>
-						
+
+						<!--resource> <directory>css</directory> <includes> <include>**/*.css</include> 
+							</includes> <targetPath>WEB-INF/classes/css</targetPath> </resource -->
+
 					</webResources>
 
 
