--- a/smockerVaadin/pom.xml
+++ b/smockerVaadin/pom.xml
@@ -27,7 +27,7 @@
 		<javax.servlet.version>2.3</javax.servlet.version>
 		<jpacontainer.version>4.0.0</jpacontainer.version>
 		<javax.persistence.version>2.1.1</javax.persistence.version>
-		<h2.version>1.3.160</h2.version>
+		<h2.version>1.4.193</h2.version>
 		<jboss-vfs.version>3.1.0.Final</jboss-vfs.version>
 		<javax.ws.rs-api.version>2.0</javax.ws.rs-api.version>
 		<maven-plugin.version>3.0.0</maven-plugin.version>
@@ -124,6 +124,12 @@
 	<dependencies>
 
 
+		<dependency>
+			<groupId>javax</groupId>
+			<artifactId>javaee-api</artifactId>
+			<version>7.0</version>
+			<scope>provided</scope>
+		</dependency>
 
 		<!-- <dependency> <groupId>org.wildfly.swarm</groupId> <artifactId>undertow</artifactId> 
 			</dependency> <dependency> <groupId>org.wildfly.swarm</groupId> <artifactId>jpa</artifactId> 
@@ -284,6 +290,7 @@
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-validator</artifactId>
 			<!-- <version>4.2.0.Final</version> -->
+			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.jboss</groupId>
@@ -396,6 +403,7 @@
 		<dependency>
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-search</artifactId>
+			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.hibernate</groupId>
@@ -424,6 +432,7 @@
 		<dependency>
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-search</artifactId>
+			<scope>provided</scope>
 			<optional>false</optional>
 		</dependency>
 		<dependency>
@@ -437,11 +446,15 @@
 			<version>2.4.4</version>
 		</dependency>
 
-<!-- 		<dependency>
-			<groupId>org.graalvm</groupId>
-			<artifactId>graal-sdk</artifactId>
-			<version>1.0.0-rc5</version>
-		</dependency> -->
+		<dependency>
+			<groupId>dom4j</groupId>
+			<artifactId>dom4j</artifactId>
+			<version>1.6.1</version>
+			<scope>provided</scope>
+		</dependency>
+
+		<!-- <dependency> <groupId>org.graalvm</groupId> <artifactId>graal-sdk</artifactId> 
+			<version>1.0.0-rc5</version> </dependency> -->
 
 		<!-- https://mvnrepository.com/artifact/com.eclipsesource.j2v8/j2v8_win32_x86_64 -->
 		<dependency>
