--- a/smockerVaadin/pom.xml
+++ b/smockerVaadin/pom.xml
@@ -1,7 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
 
 	<modelVersion>4.0.0</modelVersion>
@@ -106,7 +104,6 @@
 				<version>1.0.1.Final</version>
 				<type>pom</type>
 				<scope>import</scope>
-				<optional>false</optional>
 			</dependency>
 
 			<dependency>
@@ -284,7 +281,7 @@
 		<dependency>
 			<groupId>com.h2database</groupId>
 			<artifactId>h2</artifactId>
-			<version>${h2.version}</version>
+			<version>1.4.197</version>
 		</dependency>
 		<dependency>
 			<groupId>org.hibernate</groupId>
@@ -415,25 +412,21 @@
 					<groupId>xml-apis</groupId>
 				</exclusion>
 			</exclusions>
-			<optional>false</optional>
 		</dependency>
 		<dependency>
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-entitymanager</artifactId>
 			<scope>provided</scope>
-			<optional>false</optional>
 		</dependency>
 		<dependency>
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-validator</artifactId>
 			<scope>provided</scope>
-			<optional>false</optional>
 		</dependency>
 		<dependency>
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-search</artifactId>
 			<scope>provided</scope>
-			<optional>false</optional>
 		</dependency>
 		<dependency>
 			<groupId>org.vaadin.teemu</groupId>
