--- a/smockerVaadin/src/main/resources/BundleUI.properties
+++ b/smockerVaadin/src/main/resources/BundleUI.properties
@@ -3,6 +3,8 @@ MainTab=Main
 Play_Button=PLay
 Play_ToolTip=Play the mock, click several time to change the state
 JavaAppView=Java Applications
+MockView=Mock Space
+LogsView=Logs
 ViewDetails_Button=View Details
 Communication=Communication
 Communications=Communications
@@ -12,15 +14,16 @@ outputJson=Json Output
 outputHtml=Html output
 ParseError=Parsing error look at the logs
 AddToMock_Button=add to mock
-AddToMock_ToolTip=Add selecetd value to mock space\n
+AddToMock_ToolTip=Add selected value to mock space\n
 Mute_Button=Mute
+Save_Button=Save
 Input=Input
 GroovyEditor=Groovy editor
 Refresh_ToolTip=Refresh
 Refresh_Button=Retresh
 MockedCommunications=Mocked Communications
 Output=Output
-Json=Json\n
+Json=Json
 remove=remove
 Remove_ToolTip=remove selected item
 CleanAll_ToolTip=Clean every thing
@@ -35,3 +38,7 @@ Port=Port
 Adress=Adress
 Application=Application
 NodeEditor=Node editor
+enable=enable
+TesterPanel=Test Script
+root=all
+unamed=unamed
