Scenario + MockedResponse endPoint

--- a/smockerVaadin/src/main/resources/BundleUI.properties
+++ b/smockerVaadin/src/main/resources/BundleUI.properties
@@ -42,3 +42,17 @@ enable=enable
 TesterPanel=Test Script
 root=all
 unamed=unamed
+Ok_button=Ok
+Cancel_Button=Cancel
+createScenario=Create scenario
+renameScenario=Rename scenario
+deleteScenario=Delete Scenario
+moveComm=Move Communicaction
+undefined=undefined
+warning_invalid_Scenario_name="undefined name reserved"
+turnOnAll=turn all on
+turnOffAll=turn all off
+renameComm=Rename communication
+removeComms=Remove communications
+deleteScenarioQuestion=Delete scenario and move to undefined
+moveAllComms=Move all communications 
