--- a/smockerAgent1.7/pom.xml
+++ b/smockerAgent1.7/pom.xml
@@ -1,4 +1,5 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.jenetics</groupId>
@@ -51,19 +52,10 @@
 			<version>1.8.10</version>
 		</dependency>
 
-		<!-- https://mvnrepository.com/artifact/org.apache.commons/commons-io -->
-		<dependency>
-			<groupId>commons-io</groupId>
-			<artifactId>commons-io</artifactId>
-			<version>2.5</version>
-		</dependency>
 
 		<!-- https://mvnrepository.com/artifact/org.javassist/javassist -->
-		<!-- dependency>
-			<groupId>org.javassist</groupId>
-			<artifactId>javassist</artifactId>
-			<version>3.20.0-GA</version>
-		</dependency-->
+		<!-- dependency> <groupId>org.javassist</groupId> <artifactId>javassist</artifactId> 
+			<version>3.20.0-GA</version> </dependency -->
 
 		<dependency>
 			<groupId>sample</groupId>
