--- a/smockerVaadin/pom.xml
+++ b/smockerVaadin/pom.xml
@@ -121,7 +121,13 @@
 	</dependencyManagement>
 
 	<dependencies>
-
+		<!-- https://mvnrepository.com/artifact/javax.ejb/javax.ejb-api -->
+		<dependency>
+			<groupId>javax.ejb</groupId>
+			<artifactId>javax.ejb-api</artifactId>
+			<version>3.2</version>
+		</dependency>
+		
 		<dependency>
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-lang3</artifactId>
