--- a/smockerVaadin/src/main/resources/BundleUI.properties
+++ b/smockerVaadin/src/main/resources/BundleUI.properties
@@ -56,3 +56,6 @@ renameComm=Rename communication
 removeComms=Remove communications
 deleteScenarioQuestion=Delete scenario and move to undefined
 moveAllComms=Move all communications 
+select=select
+search_result=search Results
+nothing_Found=Nothing Found 
