Fixes + no server on client

--- a/smockerVaadin/src/main/resources/BundleUI.properties
+++ b/smockerVaadin/src/main/resources/BundleUI.properties
@@ -10,6 +10,7 @@ Communication=Communication
 Communications=Communications
 ViewDetails_ToolTip=View all the communication\n
 RemoveQuestion=Do you really want to remove selected items ?
+RemoveAllQuestion=Do you really want to remove all items ?
 outputJson=Json Output
 outputHtml=Html output
 ParseError=Parsing error look at the logs
