--- a/smockerVaadin/pom.xml
+++ b/smockerVaadin/pom.xml
@@ -486,6 +486,19 @@
 			<artifactId>lucene-queries</artifactId>
 			<version>${lucene.version}</version>
 		</dependency>
+
+		<dependency>
+			<groupId>org.codehaus.jackson</groupId>
+			<artifactId>jackson-mapper-asl</artifactId>
+			<version>1.9.13</version>
+		</dependency>
+		
+		<dependency>
+		   <groupId>org.vaadin</groupId>
+		   <artifactId>easybinder</artifactId>
+		   <version>0.5</version>
+		</dependency>
+		
 	</dependencies>
 
 	<build>
