--- a/smockerVaadin/src/main/resources/BundleUI.properties
+++ b/smockerVaadin/src/main/resources/BundleUI.properties
@@ -60,3 +60,5 @@ moveAllComms=Move all communications
 select=select
 search_result=search Results
 nothing_Found=Nothing Found 
+moveUp=moveUp
+moveDown=moveDown
