--- a/smockerVaadin/src/main/resources/BundleUI.properties
+++ b/smockerVaadin/src/main/resources/BundleUI.properties
@@ -5,6 +5,7 @@ Play_ToolTip=Play the mock, click several time to change the state
 JavaAppView=Java Applications
 MockView=Mock Space
 LogsView=Logs
+ConfigView=Config
 ViewDetails_Button=View Details
 Communication=Communication
 Communications=Communications
@@ -62,3 +63,15 @@ search_result=search Results
 nothing_Found=Nothing Found 
 moveUp=moveUp
 moveDown=moveDown
+autoRefreshCheckBox=Auto Refresh java application view
+globalConfigPane=Global Configuration
+jsLibPane=Global JS Function
+jsFilterPane=Filtering functions
+jsFormatDisplayPane=Formatter Functions
+jsGlobalFunctionsPane=Global functions
+Filter_Button=Filter
+Filter_TootTip=Filter Input Requests
+Format_Display_Button=Format Displays 
+Format_Display_TootTip=Format Input Requests
+filter_function_select=Filter Javascript Function
+format_function_display=Format and display Javascript Function
