--- a/smockerVaadin/src/main/resources/BundleUI.properties
+++ b/smockerVaadin/src/main/resources/BundleUI.properties
@@ -3,6 +3,7 @@ MainTab=Main
 Play_Button=PLay
 Play_ToolTip=Play the mock, click several time to change the state
 JavaAppView=Java Applications
+Connections=All conn
 MockView=Mock Space
 LogsView=Logs
 ConfigView=Config
@@ -32,6 +33,16 @@ CleanAll_ToolTip=Clean every thing
 CleanAll_Button=Clean All
 Clean_Button=Clean
 CleanToolTip=Clean selected item
+
+Sort_Button=Sort
+SortToolTip=Sort items by date
+
+Import_Button=Import
+ImportToolTip=Import Scenario
+
+Export_Button=Export
+ExportToolTip=Export Scenario
+
 UnWatch_Button=UnWatch
 StackTrace=StackTrace
 StackTraceToolTip=View stack trace of the caller
@@ -71,7 +82,8 @@ jsFormatDisplayPane=Formatter Functions
 jsGlobalFunctionsPane=Global functions
 Filter_Button=Filter
 Filter_TootTip=Filter Input Requests
-Format_Display_Button=Format Displays 
+Format_Display_Input_Button=Format Input
+Format_Display_Output_Button=Format Output
 Format_Display_TootTip=Format Input Requests
 filter_function_select=Filter Javascript Function
 format_function_display=Format and display Javascript Function
