--- a/smockerVaadin/src/main/resources/BundleUI.properties
+++ b/smockerVaadin/src/main/resources/BundleUI.properties
@@ -67,7 +67,7 @@ turnOnAll=turn all on
 turnOffAll=turn all off
 renameComm=Rename communication
 removeComms=Remove communications
-deleteComm=delete COmmunication
+deleteComm=delete Communication
 deleteScenarioQuestion=Delete scenario and move to undefined
 deleteCommunicationQuestion=Delete this communication
 
@@ -79,10 +79,13 @@ moveUp=moveUp
 moveDown=moveDown
 autoRefreshCheckBox=Auto Refresh java application view
 globalConfigPane=Global Configuration
+
 jsLibPane=Global JS Function
 jsFilterPane=Filtering functions
 jsFormatDisplayPane=Formatter Functions
 jsGlobalFunctionsPane=Global functions
+jsDefaultMockFunctionPane=Default mock function
+
 Filter_Button=Filter
 Filter_TootTip=Filter Input Requests
 Format_Display_Input_Button=Format Input
