--- a/smockerVaadin/pom.xml
+++ b/smockerVaadin/pom.xml
@@ -122,6 +122,11 @@
 	</dependencyManagement>
 
 	<dependencies>
+		<dependency>
+			<groupId>org.vaadin</groupId>
+			<artifactId>uploadbutton</artifactId>
+			<version>0.1.0</version>
+		</dependency>
 
 		<dependency>
 			<groupId>org.apache.commons</groupId>
