--- a/smockerVaadin/src/main/resources/BundleUI.properties
+++ b/smockerVaadin/src/main/resources/BundleUI.properties
@@ -61,6 +61,7 @@ createScenario=Create scenario
 renameScenario=Rename scenario
 deleteScenario=Delete Scenario
 moveComm=Move Communicaction
+duplicateComm=Duplicate Comm
 undefined=undefined
 warning_invalid_Scenario_name="undefined name reserved"
 turnOnAll=turn all on
@@ -93,3 +94,5 @@ Format_Display_Output_Button=Format Output
 Format_Display_TootTip=Format Input Requests
 filter_function_select=Filter Javascript Function
 format_function_display=Format and display Javascript Function
+
+UI_Conf=UI Configuration
