--- a/smockerVaadin/src/main/resources/BundleUI.properties
+++ b/smockerVaadin/src/main/resources/BundleUI.properties
@@ -17,7 +17,9 @@ outputJson=Json Output
 outputHtml=Html output
 ParseError=Parsing error look at the logs
 AddToMock_Button=add to mock
+AddAllToMock_Button=add all to mock
 AddToMock_ToolTip=Add selected value to mock space\n
+AddAllToMock_ToolTip=Add all values to mock space\n
 Mute_Button=Mute
 Save_Button=Save
 Input=Input
@@ -42,6 +44,8 @@ ImportToolTip=Import Scenario
 
 Export_Button=Export
 ExportToolTip=Export Scenario
+
+Clear_Global_Var_Button=Clear global variables
 
 UnWatch_Button=UnWatch
 StackTrace=StackTrace
@@ -96,3 +100,19 @@ filter_function_select=Filter Javascript Function
 format_function_display=Format and display Javascript Function
 
 UI_Conf=UI Configuration
+Manage_Env=Manage Smocker environment
+Manage_Dup_Host=Manage duplicate hosts
+Manage_Ignored_Host=Manage ignored hosts
+
+Notif_CommMocked_Added=Selected communication added to mock space
+Notif_CommsMocked_Added=All communications added to mock space
+
+CleaningCommMemory=CLeaning old communications to avoid memory issues
+
+Edit_Dup_Host_toolTip=Edit duplicate Hosts
+Add_Dup_Host_toolTip=Add duplicate Hosts
+Dup_Host=Duplicate Host
+
+Ignore_Host_Column=List of ignored Host
+Add_Ignore_Host_toolTip=Add host to ignore list
+Remove_Ignore_Host_toolTip=Remove host from ignore list
