--- a/RESTfulExample/pom.xml
+++ b/RESTfulExample/pom.xml
@@ -48,6 +48,16 @@
 			<artifactId>j2v8_win32_x86_64</artifactId>
 			<version>4.6.0</version>
 		</dependency>
+		
+		
+		<dependency>
+		    <groupId>com.sample</groupId>
+		    <artifactId>sample</artifactId>
+		    <version>1.0</version>
+		    <scope>system</scope>
+		    <systemPath>${project.basedir}/lib/finance-application-1.0-SNAPSHOT-jar-with-dependencies.jar</systemPath>
+		</dependency>
+		
 	</dependencies>
 
 	<!-- https://mvnrepository.com/artifact/org.apache.lucene/lucene-queries -->
