--- a/smockerVaadin/src/main/resources/BundleUI.properties
+++ b/smockerVaadin/src/main/resources/BundleUI.properties
@@ -45,6 +45,9 @@ ImportToolTip=Import Scenario
 Export_Button=Export
 ExportToolTip=Export Scenario
 
+Configure_Button=Configure
+Configure_ToolTip=Configure connection
+
 Clear_Global_Var_Button=Clear global variables
 
 UnWatch_Button=UnWatch
@@ -52,6 +55,7 @@ StackTrace=StackTrace
 StackTraceToolTip=View stack trace of the caller
 ConnectionType=ConnectionType
 Port=Port
+IdJavaApp=Application Id
 Adress=Adress
 Application=Application
 NodeEditor=Node editor
