--- a/smockerVaadin/pom.xml
+++ b/smockerVaadin/pom.xml
@@ -163,6 +163,14 @@
 			<artifactId>json-simple</artifactId>
 			<version>${google-json.version}</version>
 		</dependency>
+		
+		<!-- https://mvnrepository.com/artifact/com.jayway.jsonpath/json-path -->
+		<dependency>
+		    <groupId>com.jayway.jsonpath</groupId>
+		    <artifactId>json-path</artifactId>
+		    <version>2.4.0</version>
+		</dependency>
+		
 
 		<dependency>
 			<groupId>commons-lang</groupId>
