new dev filter host and port

--- a/smockerVaadin/src/main/resources/BundleUI.properties
+++ b/smockerVaadin/src/main/resources/BundleUI.properties
@@ -106,7 +106,8 @@ format_function_display=Format and display Javascript Function
 UI_Conf=UI Configuration
 Manage_Env=Manage Smocker environment
 Manage_Dup_Host=Manage duplicate hosts
-Manage_Ignored_Host=Manage ignored hosts
+Manage_Excluded_Host=Excluded hosts
+Manage_Included_Host=Included hosts
 
 Notif_CommMocked_Added=Selected communication added to mock space
 Notif_CommsMocked_Added=All communications added to mock space
@@ -117,6 +118,19 @@ Edit_Dup_Host_toolTip=Edit duplicate Hosts
 Add_Dup_Host_toolTip=Add duplicate Hosts
 Dup_Host=Duplicate Host
 
-Ignore_Host_Column=List of ignored Host
-Add_Ignore_Host_toolTip=Add host to ignore list
-Remove_Ignore_Host_toolTip=Remove host from ignore list
+Excluded_Host=Excluded Host
+Excluded_Host_Column=List of excluded Host
+Add_Excluded_Host_toolTip=Add host to excluded list
+Remove_Excluded_Host_toolTip=Remove excluded host from list
+Remove_Excluded_DupHost_toolTip=Remove duplicate hosts from list
+Included_Host=Included Host
+Included_Host_Column=List of included Host
+Add_Included_Host_toolTip=Add host to included list
+Remove_Included_Host_toolTip=Remove included host from list
+
+Host=Host
+Port_Range=Port Range (* or PORT1_MIN-PORT_MAX)
+
+Bad_JS_Filter_Function_Warning=Bad Javascript function should be of function(string) returning boolean 
+Bad_JS_Host_Warning=Bad format of host, it should not contains spaces
+Bad_JS_PortRange_Warning=Bad format for port range format is : * (all port) or portNumber (for single port) or minPort-maxPort 
